k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ping-pong
  labels:
    app: ping-pong
