k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ping-pong.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ping-pong
                port:
                  number: 80
